# stackb-ts-proto-example

./: BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
app/: BUILD.bazel  app.ts
proto/: BUILD.bazel
proto/place/: BUILD.bazel  place.proto
proto/thing/: BUILD.bazel  thing.proto
