# Commit: 5bbf4640487c6f3167b79c9277a377d80ec7ba3d
# Date: 2021-09-22 03:32:09 +0000 UTC
# URL: https://github.com/stackb/rules_proto/commit/5bbf4640487c6f3167b79c9277a377d80ec7ba3d
#
# Bump npm google-protobuf back up to 3.18.0 (#179)
# Size: 306266 (306 kB)
# http_archive(
#     name = "build_stack_rules_proto",
#     sha256 = "50bc1d9c5b8436d75ee09fb1386621835c04ca26f8a0020946d672e4427d7eba",
#     strip_prefix = "rules_proto-5bbf4640487c6f3167b79c9277a377d80ec7ba3d",
#     urls = ["https://github.com/stackb/rules_proto/archive/5bbf4640487c6f3167b79c9277a377d80ec7ba3d.tar.gz"],
# )

load("@build_stack_rules_proto//deps:core_deps.bzl", "core_deps")

local_repository(
    name = "build_stack_rules_proto",
    path = "../rules_proto",
)

register_toolchains("@build_stack_rules_proto//toolchain:standard")

core_deps()
