load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

## Core ##
# gazelle:proto_rule proto_compile implementation stackb:rules_proto:proto_compile

## ts-proto ##
# gazelle:proto_plugin ts_proto implementation stephenh:ts-proto:protoc-gen-ts-proto
# gazelle:proto_plugin ts_proto option emitImportedFiles=false
# gazelle:proto_language ts_proto plugin ts_proto
# gazelle:proto_language ts_proto rule proto_compile

gazelle_binary(
    name = "gazelle-protobuf",
    languages = [
        "@bazel_gazelle//language/go",
        "@bazel_gazelle//language/proto",
        "@build_stack_rules_proto//language/protobuf",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle-protobuf",
)
