load("@npm//@bazel/typescript:index.bzl", "ts_project")
# load("@build_bazel_rules_nodejs//:index.bzl", "ts_project")
# load("@build_bazel_rules_nodejs//packages/typescript:index.bzl", "ts_project")

ts_project(
    name = "app",
    srcs = ["app.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        # "//proto/place:place_ts_proto",
        "//proto/thing:thing_ts_proto",
        "@npm//long",
        "@npm//protobufjs",
    ],
)
