load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("@build_stack_rules_proto//rules/ts:ts_proto_library.bzl", "ts_proto_library")

proto_library(
    name = "thing_proto",
    srcs = ["thing.proto"],
    visibility = ["//visibility:public"],
    # deps = ["@com_google_protobuf//:timestamp_proto"],
)

proto_compile(
    name = "thing_ts_proto_compile",
    options = {"@build_stack_rules_proto//plugin/stephenh/ts-proto:protoc-gen-ts-proto": [
        "emitImportedFiles=false",
        "esModuleInterop=true",
    ]},
    outputs = ["thing.ts"],
    plugins = ["@build_stack_rules_proto//plugin/stephenh/ts-proto:protoc-gen-ts-proto"],
    proto = "thing_proto",
)

ts_proto_library(
    name = "thing_ts_proto",
    srcs = [":thing_ts_proto_compile"],
    visibility = ["//visibility:public"],
)
